# jarvis-lite

./: .gitignore  .mcp.json  CLAUDE.md  README.md  bot.py  db.py  digest.py  mcp_server.py  migrate_data.py  pyproject.toml  render.yaml  requirements.txt  run-jarvis.sh  test_bot.py  test_mcp_server.py
