[project]
name = "jarvis-lite"
version = "0.1.0"
description = "Personal GTD task management Telegram bot"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "psycopg2-binary>=2.9",
    "anthropic>=0.40",
    "apscheduler>=3.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["bot.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
