[project]
name = "jarvis-lite"
version = "0.3.0"
description = "GTD task management bot — Telegram + Ollama"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["db.py", "mcp_server.py", "bot.py", "digest.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
